--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section>
     <h2>Documents</h2>
     <ul>
-      <li><a href="files/Resume.pdf" target="_blank">View My Resume</a></li>
+      <li><a href="files/Resume.doc" target="_blank">View My Resume</a></li>
       <li><a href="files/Certificate.pdf" target="_blank">Google Certificate</a></li>
     </ul>
   </section>
