--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <h2>Documents</h2>
     <ul>
       <li><a href="files/Resume.doc" target="_blank">View My Resume</a></li>
-      <li><a href="files/Certificate.pdf" target="_blank">Google Certificate</a></li>
-    </ul>
+      <li><a href="files/google cybersecurity certificate.pdf" target="_blank">Google Certificate</a></li>
+      <li><a href="https://www.credly.com/badges/c87a0fa3-ded6-462f-b123-eaae7b21707f" target="_blank">NSA Badge in Cybersecurity</a></li>
+	</ul>
   </section>
 
   <section>
